test/users/shetag/iteratorWithOnNoReturnType.good
iteratorWithOnNoReturnType.chpl:5: In iterator 'g':
iteratorWithOnNoReturnType.chpl:8: error: invalid use of 'yield' within 'on' in serial iterator
